--- a/nmr-formatter/styles/toolbar-metadata.css
+++ b/nmr-formatter/styles/toolbar-metadata.css
@@ -37,9 +37,16 @@
     transition: all 0.2s;
     min-width: 32px;
     height: 28px;
-    display: flex;
+    display: inline-flex;
     align-items: center;
     justify-content: center;
+    text-decoration: none;
+    user-select: none;
+}
+
+.format-btn i {
+    font-size: 16px;
+    display: block;
 }
 
 .format-btn:hover {
@@ -49,19 +56,6 @@
 
 .format-btn:active {
     background-color: #d0d0d0;
-}
-
-/* Enhanced subscript/superscript styling in format buttons */
-.format-btn sub {
-    position: relative;
-    bottom: -3px;
-    font-weight: bold;
-}
-
-.format-btn sup {
-    position: relative;
-    top: -3px;
-    font-weight: bold;
 }
 
 /* Metadata fields */
