--- a/nmr-formatter/styles/layout.css
+++ b/nmr-formatter/styles/layout.css
@@ -15,8 +15,11 @@
 /* Title Bar */
 .title-bar {
     flex: 0 0 auto;
-    padding: 12px 16px;
+    padding: 0px 16px;
     background-color: #eee;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .title-bar h1 {
@@ -24,6 +27,22 @@
     font-weight: 600;
     color: black;
     margin: 0;
+}
+
+.title-bar span {
+    display: block;
+    margin-left: auto;
+    font-size: 8px;
+    color: #666;
+}
+
+.title-bar span a {
+    color: #666;
+    text-decoration: none;
+}
+
+.title-bar span a:hover {
+    text-decoration: underline;
 }
 
 
