--- a/nmr-formatter/styles/toolbar-metadata.css
+++ b/nmr-formatter/styles/toolbar-metadata.css
@@ -50,6 +50,14 @@
     &:active {
         background-color: #bbb;
     }
+    &.disabled {
+        color: #999;
+        cursor: not-allowed;
+        opacity: 0.5;
+    }
+    &.disabled:hover {
+        background-color: transparent;
+    }
 }
 
 /* Metadata fields */
